src/app/util/tablify.component.css
.simple-table-container {
  white-space: nowrap;
  display: flex;
  flex-direction: column;
  min-width:800px;
  width: 100%;
  max-height:800px;
}

.simple-table {
  flex: 1 1 auto;
  overflow: scroll;
}

.simple-table-header-row, .simple-table-row {
  display: flex;
  border-bottom: 1px solid #ccc;
  align-items: center;
  height: 32px;
  padding: 0 8px;
}

.simple-table-row:hover .simple-table-cell {
    opacity:1;
}

.simple-table-header-cell {
  padding: 0 15px 0 0;
  min-width: 100px;
  font-size: 12px;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.54);
  flex: 1;
}

.simple-table-header-cell-checkbox {
    min-width: 30px;
  font-size: 12px;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.54);
  flex: 0.1;
  padding-right: 10px;
}

.simple-table-cell {
  min-width: 100px;
  padding: 0 15px 0 0;
  width: 100%;
  font-size: 13px;
  color: rgba(0, 0, 0, 0.87);
  flex: 1;
  opacity: 0.7;
}

.simple-table-cell-checkbox {
  min-width: 30px;
  font-size: 13px;
  color: rgba(0, 0, 0, 0.87);
  flex: 0.1;
  padding-right: 10px;
}

.simple-table-cell-checkbox-indent {
  font-size: 10px;
  color: rgba(0, 0, 0, 0.87);
  flex: 0.1;
  padding-right: 10px;
  padding-left: 50px;
}

.simple-table-filter {
  display: flex;
  align-items: baseline;
  justify-content: right;
}

.mat-cell, .mat-header-cell {
    overflow: hidden;
    text-overflow: ellipsis;
}

.mat-cell:hover {
    overflow: visible;
}

.suspended-sample{
    color: #ffa600;
}

